# mcgeometry

./: CMakeLists.txt  Cell.hpp  Commiting.md  MCGeometry.cpp  MCGeometry.hpp  ProjectHome.md  README  SConstruct
Surfaces/: Cylinder.hpp  Ellipsoid.hpp  Plane.hpp  Quadric.hpp  Sphere.hpp
Surfaces/tests/: compileTests.py  tPlane.cpp  tSphere.cpp
_seth_old_montecarlo_code/: FancyGeometry.hh  tQuadric.cc
branches/scons/: CMakeLists.txt  SConstruct
branches/scons/doc/: timing.txt
branches/scons/examples/: SConscript  trickyGeometry.cpp
branches/scons/mcgeometry/: Cell.hpp  Cell.i.hpp  MCGeometry.hpp  MCGeometry.i.hpp  Sphere.hpp  Surface.hpp
branches/scons/mcgeometry/tests/: tCylinder.cpp  tPlane.cpp
branches/scons/tools/: FindTranSupport.cmake  SRJutils.cmake
branches/scons/transupport/: constants.hpp
branches/scons/transupport/tests/: SConscript  tTemplate.cpp
doc/: CMakeLists.txt  Doxyfile  index.html.in  inlining.txt  mcgDoxyMainpage.txt  thoughts.txt  timing.txt
doc/html/: _cell_8hpp__incl.md5  _cylinder_8hpp__dep__incl.map  _cylinder_8hpp__incl.map  _ellipsoid_8hpp-source.html  _ellipsoid_8hpp.html  _ellipsoid_8hpp__incl.map  _ellipsoid_8hpp__incl.md5  _m_c_geometry_8cpp-source.html  _m_c_geometry_8cpp__incl.md5  _m_c_geometry_8hpp-source.html  _m_c_geometry_8hpp.html  _m_c_geometry_8hpp__dep__incl.map  _m_c_geometry_8hpp__incl.md5  _plane_8hpp-source.html  _plane_8hpp.html  _plane_8hpp__dep__incl.map  _plane_8hpp__incl.md5  _quadric_8hpp.html  _quadric_8hpp__dep__incl.md5  _soft_equiv_8hpp.html  _soft_equiv_8hpp__dep__incl.map  _soft_equiv_8hpp__dep__incl.md5  _soft_equiv_8hpp__incl.map  _sphere_8hpp.html  _sphere_8hpp__dep__incl.map  _sphere_8hpp__dep__incl.md5  _sphere_8hpp__incl.map  _unit_tester_8cpp-source.html  (+75 more)
examples/: SConscript  createGeometry.cpp  createGeometry.hpp  generateMeshGeom.cpp  meshComparison.cpp  meshExample.cpp  meshTiming.cpp  meshTimingTest.py  plotPoints.m  trickyGeometry.cpp  visualizeSurfaces.cpp  visualizeSurfaces.hpp
mcgeometry/: CMakeLists.txt  Cell.hpp  Cell.i.hpp  Cell.t.hpp  Cylinder.hpp  Cylinder.t.hpp  CylinderNormal.hpp  CylinderNormal.t.hpp  Ellipsoid.hpp  MCGeometry.cpp  MCGeometry.hpp  Plane.cpp  Plane.hpp  Plane.i.hpp  Plane.t.hpp  PlaneNormal.hpp  Quadric.hpp  SConscript  Sphere.cpp  Sphere.hpp  Sphere.i.hpp  Surface.hpp  _MCGeometry.hpp  impl_Plane.cpp
mcgeometry/tests/: CMakeLists.txt  SConscript  tCell.cpp  tCylinder.cpp  tCylinderNormal.cpp  tMCGeometry.cpp  tPlane.cpp  tSphere.cpp  tTemplate.cpp
tags/release-1.1/examples/: CMakeLists.txt  createGeometry.cpp  visualizeSurfaces.hpp
tags/release-1.1/transupport/: CMakeLists.txt  SoftEquiv.hpp  UnitTester.hpp  blitzStuff.hpp  dbc.hpp
tags/release-1.1/transupport/tests/: CMakeLists.txt  tSuperTimer.cpp
tests/: tMCGeometry.cpp
tools/: FindBlitz.cmake
transupport/: Timer.cpp  Timer.hpp  UnitTester.cpp  UnitTester.hpp  VectorComp.hpp  VectorMath.hpp  VectorPrint.hpp  blitzStuff.hpp  constants.hpp  dbc.hpp  dbc.i
transupport/tests/: CMakeLists.txt  runTests.py  tSuperTimer.cpp  tTemplate.cpp  tTimer.cpp  tVectorComp.cpp
trunk/: CMakeLists.txt  Cell.hpp  MCGeometry.cpp  MCGeometry.hpp  Material.hpp  README  SConstruct  thoughts.txt
trunk/Surfaces/: Plane.hpp  Quadric.hpp  Sphere.hpp
trunk/Surfaces/tests/: compileTests.py  tCylinder.cpp  tQuadric.cpp
trunk/_seth_old_montecarlo_code/: FancyGeometry.cc  Quadric.cc  Quadric.hh  tFancyGeometry.cc
trunk/doc/: CMakeLists.txt  Doxyfile  LICENSE  mcgDoxyMainpage.txt  timing.txt
trunk/doc/html/: _cell_8hpp-source.html  _cell_8hpp.html  _cell_8hpp__dep__incl.map  _cell_8hpp__dep__incl.md5  _cell_8hpp__incl.map  _cylinder_8hpp-source.html  _cylinder_8hpp.html  _cylinder_8hpp__dep__incl.md5  _cylinder_8hpp__incl.md5  _m_c_geometry_8cpp.html  _m_c_geometry_8cpp__incl.map  _m_c_geometry_8hpp__dep__incl.md5  _m_c_geometry_8hpp__incl.map  _plane_8hpp__dep__incl.md5  _plane_8hpp__incl.map  _quadric_8hpp-source.html  _quadric_8hpp__dep__incl.map  _quadric_8hpp__incl.map  _quadric_8hpp__incl.md5  _soft_equiv_8hpp-source.html  _soft_equiv_8hpp__incl.md5  _sphere_8hpp-source.html  _sphere_8hpp__incl.md5  _unit_tester_8cpp.html  _unit_tester_8cpp__incl.md5  _unit_tester_8hpp.html  _vector_comp_8hpp-source.html  _vector_comp_8hpp__dep__incl.md5  _vector_math_8hpp-source.html  _vector_math_8hpp__incl.md5  _vector_print_8hpp-source.html  _vector_print_8hpp.html  _vector_print_8hpp__dep__incl.map  _vector_print_8hpp__dep__incl.md5  classmc_geometry_1_1_cell-members.html  classmc_geometry_1_1_cell__coll__graph.map  classmc_geometry_1_1_cylinder__coll__graph.md5  classmc_geometry_1_1_cylinder__inherit__graph.map  classmc_geometry_1_1_ellipsoid.html  classmc_geometry_1_1_m_c_geometry-members.html  (+54 more)
trunk/doc/presentation/: MeshComparison.gnu  MeshTiming.gnu  presentation.tex
trunk/examples/: SConscript  createGeometry.cpp  createGeometry.hpp  example.cpp  generateMeshGeom.cpp  meshComparison.cpp  meshExample.cpp  meshTiming.cpp  plotPoints.m  trickyGeometry.cpp  visualizeSurfaces.cpp
trunk/examples/extra/: BasicTally.hpp  mtrand.h
trunk/mcgeometry/: Cell.cpp  Cell.hpp  Cell.t.hpp  Cylinder.cpp  Cylinder.hpp  Cylinder.i.hpp  Ellipsoid.hpp  MCGeometry.cpp  MCGeometry.hpp  Plane.cpp  Plane.hpp  Plane.i.hpp  Plane.t.hpp  PlaneNormal.hpp  PlaneNormal.t.hpp  Quadric.hpp  Sphere.cpp  Sphere.hpp  Sphere.i.hpp  Surface.cpp  Surface.hpp  impl_Cylinder.cpp  inst_PlaneNormal.cpp
trunk/mcgeometry/tests/: SConscript  tCell.cpp  tCylinder.cpp  tCylinderNormal.cpp  tMCGeometry.cpp  tPlane.cpp  tSphere.cpp  tTemplate.cpp
trunk/tests/: compileTests.py  tMCGeometry.cpp  tTemplate.cpp
trunk/tools/: CMakeLists.txt  FindTranSupport.cmake  SRJutils.cmake  plotPoints.m
trunk/transupport/: CMakeLists.txt  SConscript  SuperTimer.hpp  Timer.cpp  Timer.hpp  UnitTester.cpp  UnitTester.hpp  VectorComp.hpp  VectorMath.hpp  VectorPrint.hpp  blitzStuff.hpp  dbc.hpp
trunk/transupport/tests/: SConscript  compileTests.py  runTests.py  tFastTimer.cpp  tTemplate.cpp  tTimer.cpp  tVectorComp.cpp  tVectorMath.cpp
wiki/: Commiting.wiki
(+89 files in other folders)
